css/a11y.css
/* ... */
input[type="button"] {
	font-weight: bold;
	padding: 0.6rem 0.2rem;
	width: 10rem;
	border-style: ridge;
	border-color: rgb(27, 95, 161);
	background-color: rgb(240,245,255);
	color: rgb(0,0,0);
	box-shadow: 0 0 1rem 0 skyblue;
}

input[type="button"]:hover {
	box-shadow: 0 0 1rem 0 cadetblue;
}

input.preview {
	float: left;
	margin-right: 1.5rem;
}

input[type = "checkbox"]{
	cursor: pointer;
}

label.show-xtra{
	display: block;
	margin: 0.5rem 0;
}

p.superseded-aa{
	display: none;
}

div.link {
	margin-top: 3rem;
}

details + details {
	margin-top: 1rem;
}

hr {
	margin: 2rem auto;
	border-color: rgb(240,245,255);
}

/* conformance results */

div.conformance-result {
	padding: 1rem 0 1rem 1.5rem;
	margin-bottom: 1rem;
}

span#conformance-result-status {
	padding-left: 4rem;
}


/* lists */

ul{
	list-style-type: square;
	margin-top: 0.5rem;
}

li{
	margin-top: 0.7rem;
}

p.instr {
	margin-top: 4rem;
}

section.warning {
	font-size: 90%;
	margin-left: 1rem;
	margin-top: 3rem;
	padding: 2rem;
	border-radius: 1rem;
	box-shadow: 0 0 0.5rem 0 gray;
	border: 0.1rem solid red;
	background-color: rgb(255,250,245);
}

section.warning h3 {
	color: rgb(190,0,0);
	font-weight: bold;
}

section.warning,
li.manifest,
li.bindings,
li.epub-switch,
li.epub-trigger {
	display: none;
}

/* fieldsets */

fieldset,
div.conformance-result,
div.onix {
	max-width: 65rem;
	border: none;
	border-left: 0.6rem double cornflowerblue;
	background-color: rgb(240,248,255);
	border-radius: 0.5rem;
	box-shadow: 0 0 0.2rem 0 grey;
}

fieldset fieldset {
	box-shadow: none !important;
	border: none !important;
	background-color: inherit !important;
}

fieldset fieldset > legend {
	padding-top: 0 !important;
}

legend + fieldset {
	margin-top: 0.5em;
}

legend{
	color: rgb(0, 0, 90);
	font-weight: bold;
	padding-top: 4rem;
}

fieldset > .note{
	font-size: 1.1rem;
	border: none !important;
	margin: 1rem 0 0 0 !important;
	padding: 0 !important;
}

fieldset.flat {
	border: none;
	margin: 0;
	padding: 0;
}

fieldset.flat > legend {
	font-weight: normal;
	float: left;
	display: inline !important;
	margin: 0;
	padding: 0;
}

fieldset.status {
	box-shadow: none !important;
	background-color: inherit !important;
}

fieldset.status > label {
	margin-left: 2rem; 
}

section#verification > div.form-data > fieldset,
div.form-data > fieldset,
div.form-data > label {
	margin: 1rem;
}

section#verification > div.form-data > fieldset > legend {
	width: 18rem;
}

section#verification > div.form-data > fieldset > label {
	width: 7rem;
}

div.form-data {
	border-left: 0.6rem double cornflowerblue;
	background-color: rgb(240,248,255);
	padding: 0.3rem 0 0.3rem 1rem;
	border-radius: 0.5rem;
	box-shadow: 0 0 0.2rem 0 grey;
}

div.form-data > fieldset {
	box-shadow: none !important;
	border-left: none;
}

div.form-data > fieldset > legend {
	padding-top: 0 !important;
}

details#view-options {
	margin-top: 2rem;
}

details#view-options > fieldset {
	margin: 1rem;
	padding: 1rem;
}

details#view-options > fieldset > legend {
	width: 25rem;
}

h2 + fieldset,
p + fieldset {
	margin-top: -2.5rem;
}

/* discovery metadata */

section#discovery div.error{
	font-style: italic;
	padding: 0.5rem;
	display: none;
}

section#discovery div.cols {
	column-width: 20rem;
	column-fill: balance;
}

section#discovery label{
	display: inline-block;
	width: 20rem;
}

section#discovery input#gen{
	margin-left: 1rem;
}

div.failure,
div.info{
	display: none;
}

div.failure{
	margin-top: 1.5rem;
}

/* notes */

div.note,
div.caution{
	padding: 0 0.8rem;
	margin-top: 1rem;
	border: 0.1rem solid rgb(0, 180, 0);
	border-radius: 1rem;
	width: 80%;
	margin-left: 5%;
}

div.caution{
	border-color: rgb(180, 0, 0);
}

div.note > p{
	font-size: 95%;
	text-indent: -3.9rem;
	margin-left: 4rem;
}

div.caution > p{
	font-size: 95%;
	text-indent: -6rem;
	margin-left: 6rem;
}

img.note-close{
	position: relative;
	top: 0.2rem;
	right: -0.5rem;
	float: right;
}

p.small{
	font-size: 1.2rem;
}

div.instr {
	font-size: 85%;
	margin-bottom: 0.8rem;
}

/* config options */

section#config{
	z-index: 9;
}

details#options{
	max-width: 65rem;
	margin-top: 1rem;
	padding: 0.5rem;
}

details#options > summary{
	margin-bottom: 1rem;
	color: rgb(0, 0, 90);
}

details#options fieldset{
	margin-top: 0.7rem;
	padding-top: 0;
	border: none;
}

details#options fieldset > legend{
	font-weight: normal
}

details#options span.label{
	font-size: 95%;
	margin-left: 1.5rem;
}

section#config small{
	font-style: italic;
}

textarea{
	width: 90%;
}

label.data > textarea{
	width: 39.8rem;
	display: inline-block;
}

/* n/a notes */

p.img,
p.av,
p.forms{
	font-size: 90%;
	font-weight: bold;
	margin-left: 3rem;
}

/* title inputs */

label.data{
	display: block;
	margin-top: 0.8rem;
}

label.data > span,
div.data > span{
	display: inline-block;
	width: 20rem;
	vertical-align: top;
}

label.data > input[type = 'text']{
	width: 40rem;
}

div.data{
	margin: 3rem 0 2rem 0;
}

div.data > div{
	margin-bottom: 0.8rem;
}


/* misc formatting */

span.hlt-first {
	display:inline-block;
}

span.hlt-first::first-letter {
	color: rgb(11,84,168);
	font-weight: bold;
}


/* optimizations for phone screens in portrait orientation */
@media only screen
 and (max-device-width : 480px)
 and (orientation : portrait){

	label.data > input{
		width: 100%;
	}

}

/* faq */

nav#faq{
	margin-bottom: 3rem;
}

nav#faq ol{
	list-style-type: none;
	margin-left: 0;
	padding-left: 1.5rem;
}

nav#faq > ol{
	padding-left: 0;
}

div.faq-title{
	font-size: 1.5rem;
	color: rgb(0, 0, 160);
	margin-top: 1.2rem;
}

dt{
	font-weight: bold;
	margin-top: 3rem;
}

/* ed notes (temp) */

.todo{
	background-color: rgb(255, 255, 230);
}

/* error pane */

body.error-pane-padding {
	margin-bottom: 13rem;
}

section#error-pane{
	background-color: rgb(50, 50, 50);
	position: fixed;
	left: 0;
	bottom: 0;
	right: 0;
	z-index: 1;
	display: none;
}
/* ... */

